# android-grid-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TERMUX_SETUP.md  andriod_grid_bot_v1.py  android_grid_bot_v1.py  async_convert.py  db.py  exchange_adapter.py  extract_agent.py  extract_telegram.py  extract_trading.py  original_bot.py  pyproject.toml  refactor_step1.py  requirements-dev.txt  requirements.txt  split_monolith.py  start_bot.py
.beads/: issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.github/workflows/: ci.yml
core/: __init__.py  agent.py  analytics.py  config.py  mock_exchange_adapter.py  telegram_handler.py  trading.py
tests/: test_mock_exchange_adapter.py  test_reconcile.py  test_short_foundation.py
tools/: backtest.py  reconcile_orders.py  sim_reconcile_demo.py
