[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "android-grid-bot"
version = "0.1.0"
description = "Lightweight grid trading bot for Android/Termux with Telegram integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"ccxt",
	"python-dotenv",
	"requests",
	"pandas",
	"numpy",
]

[project.optional-dependencies]
dev = [
	"pre-commit",
	"pytest",
	"ruff==0.15.11",
]

[tool.setuptools]
py-modules = ["andriod_grid_bot_v1", "db", "exchange_adapter", "start_bot"]

[tool.ruff]
line-length = 88
exclude = ["__pycache__", ".git", ".venv", "venv", "build", "dist", "android-grid-bot/data", "android-grid-bot/logs"]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "B"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"andriod_grid_bot_v1.py" = ["E501"]
"tests/test_reconcile.py" = ["E501"]
"tools/backtest.py" = ["E501"]
